# ray-casting

./: CMakeLists.txt  README.md
config/: polygon.txt
src/: main.cpp
